--- a/xtracker/frontend/index.html
+++ b/xtracker/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Minimalist Expense Tracker</title>
+    <title>XTracker - Expense Tracking Made Simple</title>
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="description" content="XTracker - A modern expense tracking application to help you manage and analyze your spending">
 </head>
   <body>
     <div id="root"></div>
